--- a/console/src/main/webapp/components/users/users.html
+++ b/console/src/main/webapp/components/users/users.html
@@ -1,16 +1,9 @@
 <section>
+
   <h2>Users</h2>
-  <div class="col-md-4">
-    <ul>
-      <li ng-repeat="group in users.groups">
-      <a ng-link="users({groupid: group.cn})" title={{::group.description}}>
-      <!-- <a ng-link="users({groupid: group.cn})" title={{::group.description}} ng-click="users.filter(group, $event)"> -->
-        {{::group.cn}}
-        ({{::group.users.length}})
-      </a>
-      </li>
-    </ul>
-  </div>
+
+  <groups class="col-md-4" groups="users.groups" active-group="users.activeGroup"></groups>
+
   <div class="col-md-8">
     <table class="table table-striped table-condensed">
       <thead>
@@ -29,4 +22,5 @@
       </tbody>
     </table>
   </div>
+
 </section>
