--- a/console/src/main/webapp/components/groups/groups.html
+++ b/console/src/main/webapp/components/groups/groups.html
@@ -12,7 +12,7 @@
   </strong>
   <a ng-link="users({groupid: group.cn})" title={{::group.description}}
       ng-if="(groups.activeGroup.cn != group.cn) && (prefix.cn.indexOf(group.cn)!=0)">
-    <span ng-if="group.children.length > 0">[+]</span>
+    <span ng-if="group.children.length > 0">+</span>
     {{::group | unprefix: prefix}} <span class="badge">{{::group.users.length}}</span>
   </a>
 
@@ -20,16 +20,3 @@
       ng-if="groups.isExpanded(group, groups.activeGroup)"></groups>
 
 </div>
-
-
-<h4 ng-if="isRoot">list</h4>
-<ul ng-if="isRoot">
-  <li ng-repeat="group in groups.groups">
-    <strong ng-if="groups.activeGroup.cn == group.cn">
-      {{::group.cn}} <span class="badge">{{::group.users.length}}</span>
-    </strong>
-    <a ng-link="users({groupid: group.cn})" title={{::group.description}} ng-if="groups.activeGroup.cn != group.cn">
-      {{::group.cn}} ({{::group.users.length}})
-    </a>
-  </li>
-</ul>
