--- a/ldapadmin/src/main/webapp/console/app/styles/app.scss
+++ b/ldapadmin/src/main/webapp/console/app/styles/app.scss
@@ -1,18 +1,35 @@
 body {
   padding-top: 70px;
 }
-.nav a {
-  text-transform: capitalize;
-}
 
 groups input {
   margin-bottom: 1em;
 }
 
-.chosen-container-multi .chosen-choices li.search-choice {
-  background: #f5f5f5;
-  box-shadow: none;
+.chosen-container-multi .chosen-choices {
+  border-radius: 4px;
+  padding: 2px 5px;
+  li.search-choice {
+    background: #f5f5f5;
+    box-shadow: none;
+  }
 }
-.chosen-container * {
+.chosen-container {
+  * {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  }
+  .chosen-drop {
+    border-top: 1px solid #aaa;
+    border-radius: 4px;
+    top: calc(100% + 2px);
+  }
+}
+
+[flash-message] {
+  position    : absolute;
+  width       : 20em;
+  left        : 50%;
+  margin-left : -10em;
+  top         : 1em;
+  z-index     : 2000;
 }
